# ma_blocks

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  main_rc_example  posture_upper.json  refactor.md  refactoring.md  setup_linux.sh  setup_macos.sh  video_implementation.md
src/: block.rs  block_manager.rs  constants.rs  image_loader.rs  main.rs  paths.rs  video_stream.rs
