[package]
name = "ma_blocks2"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
env_logger = "0.11.8"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "avif"] }
libavif-sys = { version = "0.13", default-features = false, features = ["codec-dav1d"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.29.1", features = ["wayland", "x11", "glow"] }
rfd = { version = "0.15", features = ["xdg-portal"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.29.1", features = ["glow"] }
rfd = { version = "0.15" }
